--- a/dev/sass/standards/variables.sass
+++ b/dev/sass/standards/variables.sass
@@ -4,8 +4,11 @@ $base64-svg: 'image/svg+xml;base64'
 
 // font var
 //-----------------------------------------------------------------------------------
++font-face('font-icon', 'fonts/font-icon/font-icon', 'font-icon')
+
 $default-font: Arial, 'Helvetica Neue', Helvetica, sans-serif
 
+$open: 'Open Sans', $default-font
 // selection color
 //-----------------------------------------------------------------------------------
 $color-selection: dodgerblue
@@ -13,3 +16,9 @@ $color-selection: dodgerblue
 // color var
 //-----------------------------------------------------------------------------------
 $color-link: dodgerblue
+
+// color
+//-----------------------------------------------------------------------------------
+$color-blue: #4a72f5
+$color-pure: #fc5669
+$color-fiol: #8b92e2
