--- a/dev/sass/style.sass
+++ b/dev/sass/style.sass
@@ -24,6 +24,7 @@
 //-----------------------------------------------------------------------------------
 @import pages/404.sass
 @import pages/index.sass
+@import pages/specialization.sass
 
 
 
