--- a/dev/sass/components/header.sass
+++ b/dev/sass/components/header.sass
@@ -1,2 +1,51 @@
 // header
 //-----------------------------------------------------------------------------------
+.header
+  padding: 20px 0
+  background-color: black
+
+  .el-btn.login
+    margin-top: 5px
+    border-color: $color-pure
+
+    &:hover
+      background-color: $color-pure
+      color: white
+
+  .wrap-search
+    position: relative
+    padding-left: 190px
+    margin-top: 5px
+
+  .search
+    position: relative
+    display: inline-block
+    width: 100%
+
+  input
+    box-sizing: border-box
+    padding-right: 25px
+    width: 100%
+    border: none
+    border-bottom: 1px solid white
+    background: none
+    box-shadow: none
+    color: white
+    font: 400 14px/36px $open
+
+  button
+    position: absolute
+    top: 10px
+    right: 0
+    color: white
+    font-size: 18px
+
+  .catalog-btn
+    position: absolute
+    top: 0
+    left: 0
+
+  .catalog-btn .el-btn
+    width: 150px
+
+
