--- a/dev/sass/standards/variables.sass
+++ b/dev/sass/standards/variables.sass
@@ -20,5 +20,6 @@ $color-link: dodgerblue
 // color
 //-----------------------------------------------------------------------------------
 $color-blue: #4a72f5
-$color-pure: #fc5669
+$color-pure: #fb5570
 $color-fiol: #8b92e2
+$color-grey: #9b9b9b
