--- a/dev/sass/components/footer.sass
+++ b/dev/sass/components/footer.sass
@@ -1,16 +1,25 @@
 // footer
 //-----------------------------------------------------------------------------------
 .footer
-  padding: 50px 0 35px
+  padding: 30px 0
   background-color: #4a4a4a
+  @media (max-width: $screen-xs-max)
+    text-align: center
 
   .programs, .contact
     display: inline-block
     float: left
     width: 20%
+    @media (max-width: $screen-sm-max)
+      width: 50%
+      margin-top: 20px
+    @media (max-width: $screen-xs-max)
+      display: none
 
   .social
     margin-top: 40px
+    @media (max-width: $screen-xs-max)
+      display: inline-block
     li
       float: left
       margin-left: 10px
@@ -28,11 +37,16 @@
       transition: all .12s ease
 
   .copywriter
-    margin-top: 20px
+    margin-top: 50px
     color: white
-    font: 400 14px/45px $open
+    font: 300 13px/38px $open
+    @media (max-width: $screen-xs-max)
+      margin-top: 20px
+
     a
       padding-left: 10px
+      @media (max-width: $screen-xs-max)
+        display: none
 
   .search
     position: relative
@@ -48,7 +62,7 @@
       background: none
       box-shadow: none
       color: white
-      font: 400 14px/36px $open
+      font: 300 13px/36px $open
 
     button
       position: absolute
@@ -58,40 +72,60 @@
       font-size: 18px
 
   .item-programs
-    margin-top: 10px
+    margin-top: 20px
+    max-width: 180px
+
     .name
-      color: rgba(white, .4)
+      color: #f9be6b
       text-decoration: none
-      font: 400 14px/20px $open
+      font: 300 13px/15px $open
       &:hover
         text-decoration: underline
     p
       color: white
-      font: 400 12px/16px $open
+      font: 300 13px/15px $open
 
   h3 .title
+    display: inline-block
+    margin-bottom: 8px
     color: white
-    font: 400 16px/20px $open
+    font: 300 13px/15px $open
 
   .contact-link
     @extend %clear-fix
     margin-top: 10px
 
+
     li
       display: block
-
+      margin-bottom: 12px
     a
+      display: inline-block
+      max-width: 160px
       color: white
       text-decoration: none
-      font: 400 14px/36px $open
+      font: 300 13px/18px $open
       &:hover
         text-decoration: underline
+      &.css-color
+        @extend %clear-fix
+        color: #f9be6b
+        i
+          float: left
+          margin-right: 5px
+          font-size: 20px
+        span
+          display: block
 
   .navigation-list
     display: inline-block
     float: left
     @extend %clear-fix
     width: 60%
+    @media (max-width: $screen-sm-max)
+      width: 100%
+    @media (max-width: $screen-xs-max)
+      display: none
 
     ul
       float: left
@@ -101,17 +135,18 @@
 
     li
       display: block
+      margin-bottom: 14px
 
     a
       color: white
       text-decoration: none
-      font: 400 14px/36px $open
+      font: 300 13px/15px $open
       &:hover
         text-decoration: underline
 
     .title
       display: block
-      margin-bottom: 10px
+      margin-bottom: 18px
       color: white
-      font: 400 16px/20px $open
+      font: 300 13px/15px $open
 
