--- a/dev/templates/index.html
+++ b/dev/templates/index.html
@@ -516,7 +516,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-4 item-serves">
-                            <img src="images/Icon-1.svg" alt="icon">
+                            <img src="images/icon-1.svg" alt="icon">
                             <p>Выбирай из&nbsp;150 курсов
                                 от&nbsp;лучших компаний
                                 и&nbsp;университетов</p>
