--- a/dev/sass/components/elements.sass
+++ b/dev/sass/components/elements.sass
@@ -1,7 +1,41 @@
 // elements
 //-----------------------------------------------------------------------------------
 
+// rating
+//-----------------------------------------------------------------------------------
+.el-rating
+  .rating
+    border: none
+    float: left
 
+
+  .rating > input
+    display: none
+
+
+  .rating > label:before
+    margin: 3.8px
+    font-size: 14px
+    font-family: FontAwesome
+    display: inline-block
+    content: "\f005"
+    cursor: pointer
+
+
+  .rating > .half:before
+    content: "\f089"
+    position: absolute
+
+
+  .rating > label
+    color: #ddd
+    float: right
+
+
+  .rating > input:checked ~ label,
+  .rating:not(:checked) > label:hover,
+  .rating:not(:checked) > label:hover ~ label
+    color: #f9be6b
 
 
 // btn style
